# manta

./: .gitignore  CHANGELOG.md  CLAUDE.md  DOCUMENTATION.md  DOCUMENTATION_TR.md  README.md  README_tr.md  coherence_eval_nmf.py  extract_top_documents_from_results.py  integrated_topic_count_finder.py  optimize_topic_count.py  perform_analysis.py  pubmed_citations.sh  pyproject.toml  requirements.txt  standalone_nmf.py  temporal_forecast_analysis.py  test_english_tokenizer.py  test_process.py
functions/common_language/: topic_analyzer.py
functions/english/: english_preprocessor.py  english_text_encoder.py  english_vocabulary.py  nmf_hoca.py  process.py  sayisallastirma.py  sozluk.py  topic_analyze.py  topics.py
functions/nmf/: __init__.py  nmf.py  nmf_init.py  nmf_orchestrator.py  opnmy_yeni.py
functions/tfidf/: __init__.py  (+6 more)
local/: standalone_nmf.py
manta/: __init__.py  cli.py  config.py  manta_entry.py  optimization_entry.py  standalone_nmf.py
nmf_standalone/: __init__.py  cli.py  standalone_nmf.py
results/: benchmark_test.py  no_bench_test.py  test.py
test/: test_analysis.py
tests/: benchmark_results.md  benchmark_test.py  no_bench_old.py  no_bench_test.py  test.py
tools/: integrated_topic_count_finder.py  manta_perform_multiple_analysis.py  medline_citation_counter.py  medline_to_csv.py  old_topic_count_finder.py  perform_analysis.py  temporal_forecast_analysis.py
utils/: coherence_score.py  distance_two_words.py  export_excel.py  gen_cloud.py  save_doc_score_pair.py  save_topics_db.py  topic_dist.py  word_cooccurrence.py
webapp/: README.md
(+137 files in other folders)
