[project]
name = "nmf-standalone"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery==5.3.6",
    "flask==3.0.2",
    "flask-cors==4.0.0",
    "flask-migrate==4.0.5",
    "flask-socketio==5.3.6",
    "flask-sqlalchemy==3.1.1",
    "gensim==4.3.2",
    "levenshtein==0.20.9",
    "matplotlib==3.10.1",
    "nltk==3.8.1",
    "numpy==1.26.4",
    "openpyxl>=3.1.5",
    "pandas==2.2.1",
    "pillow==11.1.0",
    "redis==5.0.1",
    "requests==2.32.0",
    "scikit-learn==1.3.2",
    "scipy==1.10.1",
    "sqlalchemy==2.0.27",
    "tokenizers==0.21.1",
    "wordcloud==1.9.4",
]
